--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,4 +1,5 @@
 name: M2 Integration Tests
+
 on:
   push:
     branches:
@@ -9,28 +10,49 @@ jobs:
   integration-tests:
     name: Magento 2 Integration Tests
     runs-on: ubuntu-latest
+
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306:3306
-        options: --tmpfs /tmp:rw --tmpfs /var/lib/mysql:rw --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      es:
-        image: docker.io/wardenenv/elasticsearch:7.8
+        # Keep it lightweight & healthy for CI
+        options: >-
+          --tmpfs /tmp:rw
+          --tmpfs /var/lib/mysql:rw
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -proot || exit 1"
+          --health-interval=10s --health-timeout=5s --health-retries=10
+
+      opensearch:
+        image: opensearchproject/opensearch:3.0.0
+        env:
+          discovery.type: single-node
+          plugins.security.disabled: "true"
+          OPENSEARCH_JAVA_OPTS: "-Xms512m -Xmx512m"
         ports:
           - 9200:9200
-        env:
-          'discovery.type': single-node
-          'xpack.security.enabled': false
-          ES_JAVA_OPTS: "-Xms64m -Xmx512m"
-        options: --health-cmd="curl localhost:9200/_cluster/health?wait_for_status=yellow&timeout=60s" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: >-
+          --health-cmd="curl -sS http://localhost:9200 >/dev/null || exit 1"
+          --health-interval=5s --health-timeout=5s --health-retries=20
+
     steps:
-      - uses: actions/checkout@v2
-      - name: M2 Integration Tests with Magento 2 (Php 7.4)
+      - uses: actions/checkout@v4
+
+      # extdn has tags per PHP version; use the 8.4 tag
+      - name: M2 Integration Tests with Magento 2 (PHP 8.4)
         uses: extdn/github-actions-m2/magento-integration-tests/8.4@master
         with:
           module_name: Buckaroo_Magento2
           composer_name: buckaroo/magento2
-          ce_version: '2.4.8'
+          # Use the latest patch
+          ce_version: '2.4.8-p3'
+          # Pass OpenSearch and DB settings into setup:install
+          install_args: >
+            --search-engine=opensearch
+            --opensearch-hosts=http://opensearch:9200
+            --db-host=127.0.0.1
+            --db-name=magento_integration_tests
+            --db-user=root
+            --db-password=root
